--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 certifi==2019.3.9
+dj-database-url==0.5.0
 Django==2.2
 django-crispy-forms==1.7.2
+django-heroku==0.3.1
+gunicorn==19.9.0
 Markdown==3.1
 mistune==0.8.4
+psycopg2==2.8.2
 Pygments==2.3.1
 pytz==2019.1
+six==1.12.0
 sqlparse==0.3.0
+whitenoise==4.1.2
 wincertstore==0.2
